versions/v2.8/modules/en/pages/integrations/fleet/windows-support.adoc
= Windows Support
:revdate: 2024-09-24
:page-revdate: {revdate}

Prior to Rancher v2.5.6, the `agent` did not have native Windows manifests on downstream clusters with Windows nodes. This would result in a failing `agent` pod for the cluster.

If you are upgrading from an older version of Rancher to v2.5.6+, you can deploy a working `agent` with the following workflow _in the downstream cluster_:

. Cordon all Windows nodes.
. Apply the below toleration to the `agent` workload.
. Uncordon all Windows nodes.
. Delete all `agent` pods. New pods should be created with the new toleration.
. Once the `agent` pods are running, and auto-update is enabled for Fleet, they should be updated to a Windows-compatible `agent` version.

[,yaml]
----
tolerations:
- effect: NoSchedule
  key: cattle.io/os
  operator: Equal
  value: linux
----
